--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -35,6 +35,13 @@
   notify:
   - restart-mysql 
 
+- name: Create MySQL Database
+  mysql_db:
+    login_user: "{{ mysql_user }}"
+    login_password: "{{ wp_mysql_password }}"
+    name: "{{ wp_mysql_db }}"
+    state: present
+
 - name: Create MySQL User 
   mysql_user:
     login_user: "{{ mysql_user }}"
@@ -43,12 +50,4 @@
     password: "{{ wp_mysql_password }}"
     host: '%'
     priv: '*.*:ALL'
-
-- name: Create MySQL Database
-  mysql_db:
-    login_user: "{{ wp_mysql_user }}"
-    login_password: "{{ wp_mysql_password }}"
-    name: "{{ wp_mysql_db }}"
-    state: present
-
 ...
